# AppLimit

./: .gitignore  AppLimit.sln  AppLimitInstaller.iss  BEFORE_AFTER_COMPARISON.md  FINAL_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  MARKETING_POST.md  PIN_SCREEN_IMPLEMENTATION_SUMMARY.md  PIN_SCREEN_READY_FOR_TESTING.md  README.md  VISUAL_SUMMARY.md  add_translations.ps1  add_translations.py  capture_logs.ps1  convert_icon.ps1  get_logs.bat  show_logs.bat
AppLimit/: .gitignore  AndroidManifest.xml  BUILD_AND_SECURITY_GUIDE.md  BUILD_EXECUTION_REPORT.md  DESIGN_SYSTEM_MATERIAL3.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LOCALIZATION_AND_UI_FIXES.md  RUN_IN_VSCODE.md  RUN_ON_DEVICE.md  RUN_REDESIGN.md  SECURITY_REPORT.md  build_debug.ps1  build_output.txt  error_log.txt  local.properties.example  run_emulator.ps1  run_emulator.sh  settings.gradle.kts  update_remaining_languages.ps1
AppLimit/app/src/main/cpp/: CMakeLists.txt  block_rule_engine.cpp  grayscale_controller.cpp  native-lib.cpp  pin_manager.cpp  security_validator.cpp  time_manager.cpp
AppLimit/app/src/main/cpp/include/: block_rule_engine.h  grayscale_controller.h  pin_manager.h  security_validator.h  time_manager.h
logisiel/: .gitignore  App.xaml  App.xaml.cs  BUILD.md  FILE_MANIFEST.md  GrayscaleDesktopApp.csproj  GrayscaleDesktopApp.sln  INSTALLATION_GUIDE.md  INSTALL_DOTNET.md  Localization.cs  MainWindow.xaml  MainWindow.xaml.bak  MainWindow.xaml.cs  MainWindow.xaml.cs.bak  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  build.bat  build.ps1  run.bat
(+92 files in other folders)
